AC_INIT
dnl Don't seem to need these although docs say they are required
dnl AM_INIT_AUTOMAKE(chandler,0.7)
dnl AC_ARG_PROGRAM

dnl Kinda need for configure to work properly
AC_PROG_CC

dnl Don't seem to need these although get some warnings
dnl AC_PROG_CXX
dnl AC_PROG_RANLIB
dnl AC_PROG_INSTALL
dnl AC_PROG_MAKE_SET

dnl XXX How do I set options for curl and wget and check if found? 
AC_PATH_PROG([CURL], curl)
AC_PATH_PROG([WGET], wget)

dnl Check for Python
dnl XXX do not use absolute include path
AC_ARG_WITH(system-python,
	[  --with-system-python            With system Python [default=no]],
	[ac_cv_with_python=$withval], [ac_cv_with_python=no])
AC_MSG_CHECKING([whether to use system Python])
if test $ac_cv_with_python = yes; then
	AC_MSG_RESULT(yes)
	AC_MSG_CHECKING([if Python == 2.5 is available])
	LIBS="$LIBS -lpython2.5"
	AC_LINK_IFELSE([#include </usr/include/python2.5/Python.h>
int main() {return PY_VERSION_HEX;} ],
	[ AC_MSG_RESULT(yes)
	  AC_SUBST(USE_SYSTEM_PYTHON, yes) ],
	[ AC_MSG_FAILURE(no)
	  LIBS="$ac_save_LIBS"
	  ac_cv_with_python=no ])
else
	AC_MSG_RESULT(no)
fi


dnl Check for OpenSSL
AC_ARG_WITH(system-openssl,
	[  --with-system-openssl            With system OpenSSL [default=no]],
	[ac_cv_with_ssl=$withval], [ac_cv_with_ssl=no])
AC_MSG_CHECKING([whether to use system OpenSSL])
if test $ac_cv_with_ssl = yes; then
	AC_MSG_RESULT(yes)
	AC_MSG_CHECKING([if openssl >= 0.9.7 is available])
	LIBS="$LIBS -lssl -lcrypto"
	AC_LINK_IFELSE([#include <openssl/opensslv.h>
#if OPENSSL_VERSION_NUMBER <= 0x00907000L
#error OpenSSL >= 0.9.7 required
#endif
int main() {return 0;} ],
	[ AC_MSG_RESULT(yes)
	  AC_SUBST(USE_SYSTEM_OPENSSL, yes) ],
	[ AC_MSG_FAILURE(no)
	  LIBS="$ac_save_LIBS"
	  ac_cv_with_ssl=no ])
else
	AC_MSG_RESULT(no)
fi

dnl Check for ICU
AC_ARG_WITH(system-icu,
	[  --with-system-icu            With system ICU [default=no]],
	[ac_cv_with_icu=$withval], [ac_cv_with_icu=no])
AC_MSG_CHECKING([whether to use system ICU])
if test $ac_cv_with_icu = yes; then
	AC_MSG_RESULT(yes)
	AC_MSG_CHECKING([if ICU >= 3.6 is available])
	LIBS="$LIBS -licudata -licui18n -licuio -licule -liculx -licutu -licuuc"
	AC_LINK_IFELSE([#include <unicode/uversion.h>
#if U_ICU_VERSION_MAJOR_NUM >= 4
#elif U_ICU_VERSION_MAJOR_NUM >= 3 && U_ICU_VERSION_MINOR_NUM >= 6
#else
#error ICU >= 3.6 required
#endif
int main() {return 0;} ],
	[ AC_MSG_RESULT(yes)
	  AC_SUBST(USE_SYSTEM_ICU, yes) ],
	[ AC_MSG_FAILURE(no)
	  LIBS="$ac_save_LIBS"
	  ac_cv_with_icu=no ])
else
	AC_MSG_RESULT(no)
fi


AC_CONFIG_FILES([Makefile])

dnl XXX We could run full build configure for all configure files at once
dnl XXX to immediately detect any problems
dnl AC_CONFIG_SUBDIRS([external/db external/icu external/openssl external/readline external/openjdk external/python])
AC_OUTPUT
